# sandrock-translator

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml  sandrock_translator.py
.github/workflows/: poetry-publish.yml
sandrock_translator/: main.py
